--- a/src/components/sections/Work.astro
+++ b/src/components/sections/Work.astro
@@ -20,8 +20,8 @@ interface Props {
 
 // Default works data - will be replaced by CMS data
 const defaultWorks: WorkItem[] = [
-  { brand: 'P&G', name: 'Collision', slide: 'Collision', image: '/work/p&g--collision.jpg', videoUrl: '' },
-  { brand: 'P&G', name: 'First-Time Fresh', slide: 'First-Time Fresh', image: '/work/p&g--first-time-fresh.jpg', videoUrl: '' },
+  // { brand: 'P&G', name: 'Collision', slide: 'Collision', image: '/work/p&g--collision.jpg', videoUrl: '' },
+  // { brand: 'P&G', name: 'First-Time Fresh', slide: 'First-Time Fresh', image: '/work/p&g--first-time-fresh.jpg', videoUrl: '' },
   { brand: 'Dehnco', name: 'The Most Classic Design', slide: 'The Most Classic Design', image: '/work/dehnco--the-most-classic-design.jpg', videoUrl: 'https://vimeo.com/1088839478' },
   { brand: 'Arrow Electronics', name: 'The Speed of Arrow', slide: 'The Speed of Arrow', image: '/work/arrow--the-speed-of-arrow.jpg', videoUrl: 'https://vimeo.com/1111855559' },
   { brand: 'Dole Packaged Foods', name: 'Dolemates', slide: 'Dolemates', image: '/work/dole--dolemates.jpg', videoUrl: 'https://vimeo.com/1154846381' },
