--- a/src/styles/scss/_hero.scss
+++ b/src/styles/scss/_hero.scss
@@ -9,6 +9,13 @@
     min-height: 1080px;
   }
 
+  .hero-content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    will-change: clip-path, opacity; // Optimize for smooth mask animation
+  }
+
   .video, video {   
     z-index: 1;    
     pointer-events: none; 
