--- a/src/styles/scss/_intro.scss
+++ b/src/styles/scss/_intro.scss
@@ -68,6 +68,8 @@
   }
   
   .container { 
+    flex-direction: row;
+    align-items: flex-end;
     justify-content: flex-end; 
     margin-bottom: 33vh; 
   } 
@@ -91,15 +93,26 @@
 
 .intro__section--third { 
 
-  .container { 
-    align-items: flex-end;
+  .wrapper { 
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+  }
+ 
+  .container {  
     align-items: flex-start; 
     width: fit-content;
     width: 100%;
     margin: 0;
+
+    @media (min-width: $change-layout) {
+      width: fit-content;
+    }
   }
 }
 .intro__section--fourth {
+  justify-content: flex-start; 
   .container {  
     min-height: 0vh;
   }
@@ -109,7 +122,7 @@
 
 .image-phrase {
   position: absolute; 
-  top: 5%;
+  top: 15%;
   left: 0%;
   width: 50vw;
   height: auto;
