--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -123,7 +123,7 @@ const {
     // Initialize SplitText for title (words)
     const title = document.querySelector('.about h3.title') as HTMLElement;
     if (title) {
-      initSplitText(title, { type: 'words' });
+      initSplitText(title, { type: 'character', stagger: 0.02 });
     }
 
     // Initialize SplitText for bios with hover animation
@@ -179,20 +179,7 @@ const {
 
   initParallax('.about .logo--vertical', {
     speed: 7  
-  });  
-
-  // initParallax('.about .team__card .team__name--ben', {
-  //   speed: -1.75  
-  // });  
-  // initParallax('.about .team__card .team__name--nik', {
-  //   speed: -1.75  
-  // });  
-  // initParallax('.about .team__card .team__name--phil', {
-  //   speed: -1.75  
-  // });  
-  // initParallax('.about .team__card .team__name--kristi', {
-  //   speed: -1.75  
-  // });  
+  });   
 
   initUkiyo('.about .team__card img', {
     scale: 1.15,
