--- a/src/styles/scss/_works.scss
+++ b/src/styles/scss/_works.scss
@@ -71,8 +71,7 @@
   span {
     display: inline-block;
     width: 250px;
-    font-size: 14px;
-    opacity: 0.5;
+   
     margin: 0 0 .5rem 0;
 
     @media (min-width: $change-layout) {
@@ -85,22 +84,41 @@
     pointer-events: none;
   }
 
+  .brand {
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: -0.0125em;
+    opacity: 0.5;
+  }
+
   .name { 
     width: 100%;
     height: 100%;
     z-index: 2; 
-    opacity: 1;
+    opacity: 0.5;
     transition: opacity .35s ease;
 
     p { 
-      width: 100%;
+      position: relative;
+      width: fit-content;
       max-width: unset;
 
       font-size: clamp(32px, 5vw, 64px);
       font-weight: 900;
       line-height: 1;
       bottom: 0rem;
-      left: 2rem;   
+      left: 2rem;
+
+      .underline {
+        position: absolute;
+        bottom: -2px;
+        left: 0;
+        height: 2px;
+        width: 0;
+        background-color: #fff;
+        transform-origin: left;
+        // opacity: 1;
+      }
     }
   }
 
