style: enhance About section with transition effects on hover - added transition to the team member images for smoother scaling on hover - improved visual interaction by scaling images to 1.1 on hover

--- a/src/styles/scss/_about.scss
+++ b/src/styles/scss/_about.scss
@@ -76,7 +76,9 @@
     position: relative;
     
     width: min(65vw, 480px);
-    height: 100%; 
+    height: 100%;
+
+    transition: transform 1s ease-out;
 
     @media (max-width: ($change-layout - 1px)) {
       width: min(80vw, 480px);
@@ -105,6 +107,11 @@
   }
 
   &:hover {
+
+    picture {
+      transform: scale(1.1);
+    }
+
     .team__overlay {
       opacity: 0.75;
     }
