--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -41,7 +41,7 @@
     <meta name="theme-color" content="#ffffff" />
     
     <!-- Preload critical images -->
-    <link rel="preload" as="image" href="/hero/Ultrarealistic_cinematic_video_1080p_2026011.jpg" />
+    <!-- <link rel="preload" as="image" href="/hero/Ultrarealistic_cinematic_video_1080p_2026011.jpg" /> -->
     <link rel="preload" as="image" href="/images/phrase.jpg" />
     <link rel="preload" as="image" href="/images/flow.jpg" />
     <link rel="preload" as="image" href="/team/kristi.jpg" />
