--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,6 +14,7 @@
 // External components
 @use './scss/lenis' as *;
 @use './scss/cursor' as *;
+@use './scss/custom-cursor' as *;
 @use './scss/swiper' as *;
 
 // Main Section + Generic styles
