style: add text transformation to product styles for improved readability

--- a/src/styles/scss/_products.scss
+++ b/src/styles/scss/_products.scss
@@ -234,6 +234,7 @@
   color: #000;
   pointer-events: none;
   z-index: 2;
+  text-transform: uppercase;
 
   @media (min-width: $change-layout) {
     position: absolute;
