style: refine About section and SCSS styles for improved layout and responsiveness - adjusted parallax speed in About section for better visual effect - modified alignment in intro container for enhanced layout on larger screens - updated image positioning in intro section for improved aesthetics - encapsulated background image styles within a nested class for better organization

--- a/src/styles/scss/_intro.scss
+++ b/src/styles/scss/_intro.scss
@@ -69,10 +69,14 @@
   
   .container { 
     flex-direction: row;
-    align-items: flex-end;
+    align-items: center;
     justify-content: flex-end;
     padding-bottom: 15vh;
     min-height: 100vh;
+
+    @media (max-width: ($change-layout - 1px)) {
+      align-items: flex-end;
+    }
   } 
 
   .title {
@@ -123,7 +127,7 @@
 
 .image-phrase {
   position: absolute; 
-  top: 15%;
+  top: 0%;
   left: 0;
   width: 50vw;
   height: auto;
